# Homework_27

./: db.sqlite3  pyproject.toml
Homework_27/: settings.py  urls.py
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
datasets/: data.py
