[tool.poetry]
name = "homework-27"
version = "0.1.0"
description = ""
authors = ["352 <ivan-2022>"]
readme = "README.md"
packages = [{include = "homework_27"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
